[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Enemies/Alpha/Alpha1Bar.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Enemies/Alpha/Alpha1Weapon.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Enemies/Alpha/Alpha1.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Enemies/Bosses/boss_1_g.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Bosses/boss_1_j.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Bosses/boss_1_a.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 10 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 150, 0 )
b = Vector2( 150, 1080 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 1770, 0 )
b = Vector2( 1770, 1080 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18, 15.333 )

[node name="BossAlpha1" type="Node2D"]
script = ExtResource( 4 )

[node name="Bouncing Walls" type="Node2D" parent="."]

[node name="Upper" type="StaticBody2D" parent="Bouncing Walls"]
collision_layer = 192
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bouncing Walls/Upper"]
position = Vector2( 960, 0 )
shape = SubResource( 1 )

[node name="Lower" type="StaticBody2D" parent="Bouncing Walls"]
collision_layer = 192
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bouncing Walls/Lower"]
position = Vector2( 960, 1080 )
shape = SubResource( 2 )

[node name="RestrectiveWalls" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="Left" type="CollisionShape2D" parent="RestrectiveWalls"]
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="RestrectiveWalls"]
shape = SubResource( 4 )

[node name="LeftBar" type="KinematicBody2D" parent="."]
position = Vector2( 75, 540 )
scale = Vector2( 1, 6 )
collision_layer = 128
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftBar"]
polygon = PoolVector2Array( 15, 15, 0, 18, -15, 15, -15, -15, 0, -18, 15, -15 )

[node name="Extreme1" type="Polygon2D" parent="LeftBar"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 15, 15, 0, 18, -15, 15 )

[node name="Extreme2" type="Polygon2D" parent="LeftBar"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 15, -15, 0, -18, -15, -15 )

[node name="Sprite" type="Sprite" parent="LeftBar"]
position = Vector2( 0, -0.166664 )
scale = Vector2( 1, 1.01111 )
texture = ExtResource( 5 )

[node name="Weapon" type="Area2D" parent="LeftBar"]
collision_layer = 16
collision_mask = 32
script = ExtResource( 3 )
ball_speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBar/Weapon"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="LeftBar/Weapon"]
texture = ExtResource( 6 )

[node name="SpawnPoint" type="Position2D" parent="LeftBar/Weapon"]
position = Vector2( 29, 0 )

[node name="RightBar" type="KinematicBody2D" parent="."]
position = Vector2( 1845, 540 )
scale = Vector2( 1, 6 )
collision_layer = 192
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RightBar"]
polygon = PoolVector2Array( 15, 15, 0, 18, -15, 15, -15, -15, 0, -18, 15, -15 )

[node name="Extreme1" type="Polygon2D" parent="RightBar"]
polygon = PoolVector2Array( 15, 15, 0, 18, -15, 15 )

[node name="Extreme2" type="Polygon2D" parent="RightBar"]
polygon = PoolVector2Array( 15, -15, 0, -18, -15, -15 )

[node name="Sprite" type="Sprite" parent="RightBar"]
texture = ExtResource( 7 )
[connection signal="bounce" from="LeftBar" to="RightBar" method="follow"]
[connection signal="bounce" from="RightBar" to="LeftBar" method="follow"]
